# test1

./: db.sqlite3  pyproject.toml  render.yaml
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_auto_20201209_2022.py  0003_auto_20201209_2240.py  0004_atl.py  0005_showcase.py  0006_auto_20201213_0346.py  0007_auto_20201213_0435.py  0008_notice.py  0009_notice_name.py  0010_purchaseform.py  0011_auto_20201227_0313.py  0012_auto_20201227_1606.py  0013_auto_20201227_1630.py  0014_auto_20201227_1707.py  0015_auto_20201227_1718.py  0016_notice_board_link.py  0017_notice_board_date.py  0018_esamachar.py
media/showcase/: images_1.jfif
ssv/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: main.js
templates/: atl.html  base.html  checkout.html  eSamachar.html  gallery.html  index.html  notice.html  showcase.html  staff.html
