[tool.poetry]
name = "ssv render"
version = "0.1.0"
description = "SSV Project"
authors = ["codes-ac <imavin27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.2.5"
gunicorn = "^21.2.0"
pillow = "^10.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.8"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
